--- a/index.html
+++ b/index.html
@@ -1,24 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8" />
-  <title>Netlify Hello World</title>
+    <title>Hello Netlify</title>
 </head>
 <body>
-  <h1>Hello from Netlify Frontend</h1>
-  <button id="call">Call Backend</button>
-  <pre id="response"></pre>
-
-  <script>
-    document.getElementById('call').addEventListener('click', async () => {
-      try {
-        const res = await fetch('/.netlify/functions/hello');
-        const data = await res.json();
-        document.getElementById('response').textContent = JSON.stringify(data, null, 2);
-      } catch (err) {
-        document.getElementById('response').textContent = 'Error: ' + err;
-      }
-    });
-  </script>
+    <h1>Hello from Netlify Frontend</h1>
+    <button onclick="callBackend()">Call Backend</button>
+    <script>
+        async function callBackend() {
+            let res = await fetch("/.netlify/functions/hello");
+            let text = await res.text();
+            alert(text);
+        }
+    </script>
 </body>
 </html>
